# jsaw

./: .gitignore  Cargo.toml  README.md  generate-js.sh  package-lock.json  package.json  parcel.sh  settings.gradle.kts
crates/jacon/src/: lib.rs
crates/mobile/jacon/: Cargo.toml
crates/mobile/portal-jsc-swift-backend/src/: lib.rs
crates/portal-jsc-generator/src/: main.rs
crates/portal-jsc-mob-backend-common/: Cargo.toml
crates/portal-jsc-mob-backend-common/src/: lib.rs
crates/portal-jsc-out-ir-core/src/: lib.rs  llir.rs
crates/portal-jsc-swift-backend/: Cargo.toml
crates/portal-jsc-swift-backend/src/: lib.rs
crates/portal-jsc-waffle/: Cargo.toml
crates/portal-jsc-waffle/src/: lib.rs  repr.rs
crates/portal-jsc-waffle/src/repr/: trie.rs
crates/swc-batch/src/: lib.rs
jacon/: Cargo.toml  build.gradle.kts
jacon/src/: lib.rs
jacon/src/main/java/pc/portal/jacon/: Blocks.java
js-runtime-lib/: Cargo.toml
js-runtime-lib/src/: lib.rs  synth.rs  wasm.rs
jsaw-intrinsics-base/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  package.json
portal-jsc-common/: Cargo.toml
portal-jsc-common/src/: lib.rs
portal-jsc-generator/: Cargo.toml
portal-jsc-generator/src/: main.rs
portal-jsc-mob-backend-common/: Cargo.toml
portal-jsc-mob-backend-common/src/: lib.rs
portal-jsc-out-ir-core/: Cargo.toml
portal-jsc-out-ir-core/src/: lib.rs  llir.rs
portal-jsc-swift-backend/: Cargo.toml
portal-jsc-swift-backend/src/: lib.rs
simpl-js/: Cargo.toml
simpl-js-rust/: Cargo.toml
simpl-js-rust/src/: compiler.rs  lib.rs
simpl-js/src/: lib.rs
swc-batch/: Cargo.toml
swc-batch/src/: lib.rs
swc-cfg/: Cargo.toml
swc-cfg/src/: lib.rs  recfg.rs  simplify.rs
swc-emit-rust/: Cargo.toml
swc-emit-rust/src/: lib.rs  wasm.rs
swc-opt-ssa/: Cargo.toml
swc-opt-ssa/src/: impls.rs  into.rs  lib.rs
swc-ssa/: Cargo.toml
swc-ssa/src/: ch.rs  idw.rs  impls.rs  lib.rs  rew.rs  simplify.rs
swc-tac/: Cargo.toml
swc-tac/src/: lam.rs  lib.rs  rew.rs  simpl.rs
swc-tac/src/simpl/: impls.rs  reloop.rs
swc-util/: Cargo.toml
swc-util/src/: brighten.rs  lib.rs  type.rs
swc-waffle/: Cargo.toml
swc-waffle/src/: lib.rs
