[workspace]
members=[  "simpl-js", "simpl-js-rust", "swc-batch","swc-cfg",  "swc-opt-ssa", "swc-ssa", "swc-tac", "swc-util"]

# "js-runtime-lib","swc-emit-rust","swc-waffle"

resolver="2"

[workspace.dependencies]
anyhow = "1.0.87"
bimap = "0.6.3"
id-arena = "2.2.1"
arena-traits = {version="^0.2.1",features=["id-arena"]}
ssa-traits = "^0.2.1"
cfg-traits = "^0.2.1"
ssa-impls = "^0.2.1"
ssa-reloop = "^0.2.1"
swc_atoms = "5.0.0"
swc_common = "8.0.0"
swc_ecma_ast = "8.0.0"
swc_ecma_compat_es2015 = "11.0.0"
swc_ecma_minifier = "12.0.0"
swc_ecma_transforms_base = "11.0.0"
swc_ecma_utils = "11.0.0"
swc_ecma_visit = "8.0.0"
swc_bundler = "11.0.0"
swc_ecma_loader = "8.0.0"
swc_ecma_parser = "10.0.0"

proc-macro2 = "1.0.88"
quasiquote = "0.1.1"
quote = "1.0.37"
syn = "2.0.82"

typenum = "1.18.0"
bitflags = "2.8.0"
relooper = "0.1.0"
cityhasher = "0.1.0"

portal-pc-waffle="^0.5"
