[workspace]
members=[ "jacon", "portal-jsc-common", "portal-jsc-out-ir-core", "portal-jsc-swift-backend",  "simpl-js", "simpl-js-rust", "swc-batch","swc-cfg",  "swc-opt-ssa", "swc-ssa", "swc-tac", "swc-util"]

# "js-runtime-lib","swc-emit-rust","swc-waffle"

resolver="2"

[workspace.dependencies]
anyhow = "^1.0.87"
bimap = "^0.6.3"
id-arena = "^2.2.1"
arena-traits = {version="^0.2.1",features=["id-arena"]}
ssa-traits = "^0.2.1"
cfg-traits = "^0.2.1"
ssa-impls = "^0.2.1"
ssa-reloop = "^0.2.1"
swc_atoms = "^5.0.0"
swc_common = "^12.0.0"
swc_ecma_ast = "^12.0.0"
swc_ecma_compat_es2015 = "^17.0.0"
swc_ecma_minifier = "^21.0.0"
swc_ecma_transforms_base = "^16.0.0"
swc_ecma_transforms_optimization = "^17.0.0"
swc_ecma_utils = "^16.0.0"
swc_ecma_visit = "^12.0.0"
swc_bundler = "^20.0.0"
swc_ecma_loader = "^12.0.0"
swc_ecma_parser = "^15.0.0"
swc_ecma_codegen = "^14"

proc-macro2 = "^1.0.88"
quasiquote = "^0.1.1"
quote = "^1.0.37"
syn = "^2.0.82"

typenum = "^1.18.0"
bitflags = "^2.8.0"
relooper = "^0.1.0"
cityhasher = "^0.1.0"

portal-pc-waffle="^0.6"
px-llvm-codegen-utils-core="^0.1.4"
px-llvm-codegen-utils-info="^0.1.4"
portal-pc-asm-common = "^0.1.0"
bitvec = "^1.0.1"
