[package]
name = "portal-jsc-out-ir-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"

[dependencies]
id-arena.workspace = true
portal-pc-asm-common.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true

[features]
llir=[]
mobir=[]
soup=[]
