[package]
name = "portal-jsc-swift-backend"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Swift backend for ECMAScript"

[dependencies]
either = { version = "^1.15.0", default-features = false }
itertools = { version = "^0.14.0", default-features = false, features = ["use_alloc"] }
symbolism = "0.1.0"
