[package]
name = "portal-jsc-swc-batch"
version = "0.6.0"
edition = "2021"
license = "CC0-1.0"
description = "ECMAScript IR"

[dependencies]
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true

portal-jsc-swc-util = { version = "0.6.0", path = "../swc-util" }
