[package]
name = "portal-jsc-swc-cfg"
version = "0.1.1"
edition = "2021"

[lib]
name = "swc_cfg"

[dependencies]
anyhow.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
relooper = "0.1.0"
ssa-impls.workspace = true
ssa-reloop.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
