[package]
name = "portal-jsc-swc-cfg"
version = "0.3.0"
edition = "2021"
license = "CC0-1.0"
description = "ECMAScript IR"

[lib]
name = "swc_cfg"

[dependencies]
anyhow.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
relooper.workspace = true
ssa-impls.workspace = true
ssa-reloop.workspace = true
arena-traits.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
