[package]
name = "portal-jsc-swc-emit-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "swc_emit_rust"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true
proc-macro2.workspace = true
quasiquote.workspace = true
quote.workspace = true


ssa-traits.workspace = true
portal-jsc-swc-cfg = { version = "0.1.0", path = "../swc-cfg" }
portal-jsc-swc-tac = { version = "0.1.0", path = "../swc-tac" }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
syn.workspace = true
