[package]
name = "portal-jsc-swc-opt-ssa"
version = "0.2.0"
edition = "2021"
license = "CC0-1.0"
description = "ECMAScript IR"

[lib]
name = "swc_opt_ssa"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true

cfg-traits.workspace = true

ssa-traits.workspace = true
portal-jsc-swc-cfg = { version = "0.2.0", path = "../swc-cfg" }
portal-jsc-swc-tac = { version = "0.2.0", path = "../swc-tac" }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
portal-jsc-swc-ssa = { version = "0.2.0", path = "../swc-ssa" }
paste = "1.0.15"
ssa-impls.workspace = true
