[package]
name = "portal-jsc-swc-opt-ssa"
version = "0.6.0"
edition = "2021"
license = "CC0-1.0"
description = "ECMAScript IR"

[lib]
name = "swc_opt_ssa"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true

cfg-traits.workspace = true

ssa-traits.workspace = true
portal-jsc-swc-cfg = { version = "0.6.0", path = "../swc-cfg" }
portal-jsc-swc-tac = { version = "0.6.0", path = "../swc-tac" }
portal-jsc-swc-util = { version = "0.6.0", path = "../swc-util", features = ["ty"] }
portal-jsc-simpl-js = { version = "0.6.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
portal-jsc-swc-ssa = { version = "0.6.0", path = "../swc-ssa" }
paste = "1.0.15"
ssa-impls.workspace = true
num-traits = "0.2.19"

[features]
simpl=["dep:portal-jsc-simpl-js","portal-jsc-swc-tac/simpl","portal-jsc-swc-ssa/simpl"]
