[package]
name = "swc-ssa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
ssa-traits.workspace = true
swc-cfg = { version = "0.1.0", path = "../swc-cfg" }
swc-tac = { version = "0.1.0", path = "../swc-tac" }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
