[package]
name = "portal-jsc-swc-ssa"
version = "0.3.1"
edition = "2021"
license = "CC0-1.0"
description = "ECMAScript IR"
[lib]
name = "swc_ssa"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
id-arena.workspace = true
ssa-traits.workspace = true
portal-jsc-swc-cfg = { version = "0.3.0", path = "../swc-cfg" }
portal-jsc-swc-tac = { version = "0.3.0", path = "../swc-tac" }
portal-jsc-swc-util = { version = "0.1.0", path = "../swc-util" }
portal-jsc-simpl-js = { version = "0.1.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
num-traits = "0.2.19"

[features]
simpl=["dep:portal-jsc-simpl-js","portal-jsc-swc-tac/simpl"]