[package]
name = "portal-jsc-swc-tac"
version = "0.1.2"
edition = "2021"

[lib]
name = "swc_tac"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
either = "1.13.0"
id-arena.workspace = true
portal-jsc-swc-cfg = { version = "0.1.0", path = "../swc-cfg" }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
