[package]
name = "portal-jsc-swc-tac"
version = "0.6.2"
edition = "2024"
license = "MPL-2.0"
description = "ECMAScript IR"

[lib]
name = "swc_tac"


[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
cfg-traits.workspace = true
ssa-impls.workspace = true
ssa-reloop.workspace = true
relooper.workspace = true
either = "1.13.0"
id-arena.workspace = true
portal-jsc-swc-cfg = { version = "0.6.0", path = "../swc-cfg" }
portal-jsc-swc-util = { version = "0.6.0", path = "../swc-util" }
portal-jsc-simpl-js = { version = "0.6.0", path = "../simpl-js", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
bitflags.workspace = true
portal-jsc-common = { version = "0.6.0", path = "../portal-jsc-common" }

[features]
simpl=["dep:portal-jsc-simpl-js"]
