[package]
name = "portal-jsc-swc-util"
version = "0.1.0"
edition = "2021"

license = "CC0-1.0"
description = "ECMAScript IR"

[dependencies]
bitflags.workspace = true
num-traits = "0.2.19"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true

[features]
ty=[]
