[package]
name = "portal-jsc-swc-waffle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "swc_waffle"

[dependencies]
anyhow.workspace = true
arena-traits.workspace = true
id-arena.workspace = true



ssa-traits.workspace = true
portal-jsc-swc-cfg = { version = "0.3.0", path = "../swc-cfg" }
portal-jsc-swc-tac = { version = "0.3.0", path = "../swc-tac" }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true

portal-pc-waffle.workspace = true
portal-jsc-swc-ssa = { version = "0.3.0", path = "../swc-ssa" }
portal-jsc-swc-opt-ssa = { version = "0.3.0", path = "../swc-opt-ssa" }
paste = "1.0.15"
waffle-ast.workspace = true
